ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  labels:
    app: test-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api/net/(.*)
        pathType: Prefix
        backend:
          service:
            name: netcore
            port:
              number: 5000
      - path: /api/node/(.*)
        pathType: Prefix
        backend:
          service:
            name: nodejs
            port:
              number: 9100
  ingressClassName: nginx
